--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /*!
 Theme Name: FAU-Einrichtungen
-Version: 2.1.6-17
+Version: 2.1.6-18
 Requires at least: 5.9
 Tested up to: 6.0
 Requires PHP: 7.4
@@ -13557,27 +13557,69 @@ main .news-more-links .news-rss:hover:before {
 .imagelink .thumbnail .slick-slide a,
 .imagelink .thumbnail .slick-slide .image {
   height: 150px;
+  width: 150px;
 }
 .imagelink .thumbnail .slick-item a img, .imagelink .thumbnail .slick-item .image img,
 .imagelink .thumbnail .slick-slide a img,
 .imagelink .thumbnail .slick-slide .image img {
   max-height: 150px;
+  max-width: 150px;
 }
 .imagelink .x120 .slick-item,
 .imagelink .x120 .slick-slide {
   width: 120px;
 }
+.imagelink .x120 .slick-item a, .imagelink .x120 .slick-item .image,
+.imagelink .x120 .slick-slide a,
+.imagelink .x120 .slick-slide .image {
+  height: 120px;
+}
+.imagelink .x120 .slick-item a img, .imagelink .x120 .slick-item .image img,
+.imagelink .x120 .slick-slide a img,
+.imagelink .x120 .slick-slide .image img {
+  max-height: 120px;
+}
 .imagelink .x240 .slick-item,
 .imagelink .x240 .slick-slide {
   width: 240px;
+}
+.imagelink .x240 .slick-item a, .imagelink .x240 .slick-item .image,
+.imagelink .x240 .slick-slide a,
+.imagelink .x240 .slick-slide .image {
+  height: 240px;
+}
+.imagelink .x240 .slick-item a img, .imagelink .x240 .slick-item .image img,
+.imagelink .x240 .slick-slide a img,
+.imagelink .x240 .slick-slide .image img {
+  max-height: 240px;
 }
 .imagelink .x360 .slick-item,
 .imagelink .x360 .slick-slide {
   width: 360px;
 }
+.imagelink .x360 .slick-item a, .imagelink .x360 .slick-item .image,
+.imagelink .x360 .slick-slide a,
+.imagelink .x360 .slick-slide .image {
+  height: 360px;
+}
+.imagelink .x360 .slick-item a img, .imagelink .x360 .slick-item .image img,
+.imagelink .x360 .slick-slide a img,
+.imagelink .x360 .slick-slide .image img {
+  max-height: 360px;
+}
 .imagelink .x480 .slick-item,
 .imagelink .x480 .slick-slide {
   width: 480px;
+}
+.imagelink .x480 .slick-item a, .imagelink .x480 .slick-item .image,
+.imagelink .x480 .slick-slide a,
+.imagelink .x480 .slick-slide .image {
+  height: 480px;
+}
+.imagelink .x480 .slick-item a img, .imagelink .x480 .slick-item .image img,
+.imagelink .x480 .slick-slide a img,
+.imagelink .x480 .slick-slide .image img {
+  max-height: 480px;
 }
 .imagelink .logo-thumb .slick-item,
 .imagelink .logo-thumb .slick-slide {
