--- a/src/sass/structure/content/_imagelink.scss
+++ b/src/sass/structure/content/_imagelink.scss
@@ -50,6 +50,7 @@
 		margin: auto;	
 		 img {
 		   max-height: 110px;
+		   max-width: 140px;
 	       }
 	    }
 	    
@@ -78,7 +79,7 @@
 		   width: 150px;
 		     img {
 			max-height: 150px; 
-			max-width: 150px; 
+			width: 150px; 
 		   }
 	       }
 	    }
@@ -92,6 +93,7 @@
 		height: 120px;
 	         img {
 		   max-height: 120px;
+		    width: 120px;
 	       }
 	   }
 	}
@@ -103,6 +105,7 @@
 		height: 240px;
 	        img {
 		   max-height: 240px;
+		    width: 240px;
 	       }
 	   }
 	}
@@ -114,6 +117,7 @@
 		 height: 360px;
 	        img {
     		   max-height: 360px;
+		    width: 360px;
 	       }
 	   }
 	}
@@ -125,6 +129,7 @@
 	        height: 480px;
 	        img {
 		   max-height: 480px;
+		    width: 480px;
 	       }
 	   }
 	}
@@ -136,6 +141,7 @@
 	       height: 110px;
 	       img {
 		   max-height: 110px;
+		    width: 140px;
 	       }
 	   }
 	}
@@ -146,6 +152,7 @@
 	       height: 110px;
 	        img {
 		   max-height: 110px;
+		    width: 220px;
 	       }
 	   }
 	}
@@ -157,6 +164,8 @@
 		   height: 150px;
 		    img {
 		       max-height: 150px;
+		       width: 300px;
+			
 		   }
 	       }
 	    }
