--- a/src/sass/structure/content/_imagelink.scss
+++ b/src/sass/structure/content/_imagelink.scss
@@ -50,7 +50,8 @@
 		margin: auto;	
 		 img {
 		   max-height: 110px;
-		   max-width: 140px;
+		   width: 140px;
+		   padding: 0;
 	       }
 	    }
 	    
