--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -377,8 +377,10 @@ $screen-xl: 1400px;
 $screen-xxl: 1760px;
 $screen-xxs: 320px;
 
-$slider-maxwidth: 1260px;
-$slider-maxheight: 350px;
+//$slider-maxwidth: 1260px;
+$slider-maxwidth: 100%;
+//$slider-maxheight: 350px;
+$slider-maxheight: 480px;
 $slider-arrow-width: 40px;
 
 $wordpress-adminbar-break: 783px;
