--- a/src/sass/structure/hero/_slider.scss
+++ b/src/sass/structure/hero/_slider.scss
@@ -7,18 +7,24 @@
     overflow: inherit;
 }
 
+.slider-titel header a {
+	//Remove the underline of title on slider
+		text-decoration: none !important;
+}
+ 
 #hero-slides {
 	position: relative;
 	display: none;
 	height: auto;
-	background: var(--color-hero-bg);
-	@include box-shadow(0 10px 20px rgba(0, 0, 0, 0.5));
+	width: 100%;
+
+
 
 	.item {
 		position: relative;
 		overflow: hidden;
 		width: 100%;
-		height: 250px;
+		height: 150px;
 
 		@media (min-width: $screen-sm) {
 			height:  $slider-maxheight;
@@ -30,6 +36,16 @@
 		}
 
 		.slider-titel {
+			text-align: center;
+			font-size: 3.5rem;
+			transition: all 1s;
+			&a,
+			&:hover{
+				transform: scale(1.025);
+				
+			
+
+			}
 			@media (min-width: $screen-sm) {
 				margin-bottom: 5px;
 			}
@@ -38,9 +54,6 @@
 				padding: 3px;
 				margin: 25px 30px;
 				word-break: break-word;
-				
-				@include px2rem($font-size-hero-slider-title);
-				
 				box-decoration-break: clone;
 				@media (min-width: $screen-sm) {
 					margin: 10px 0 15px 0;
@@ -51,13 +64,14 @@
 		}
 		.slider-text {
 			display: none;
+			
+
 			@media (min-width: $screen-sm) {
 				display: inline-block;
 			}
 			
 
 			p {
-				@include px2rem($font-size-hero-slider-text, $font-size-gridbase, $font-size-hero-slider-text * 1.7);
 				padding: 5px 4px 4px 4px;
 				margin: 0;
 				box-decoration-break: clone;
@@ -72,13 +86,16 @@
 		
 		.slider-titel, 
 		.slider-text {
-		    max-width: 55rem;
-		    
+		    max-width: 100%;
+			z-index: 19;
+			width: 100%;
+			text-align: center;
 		    header, p {
-			background-color: var(--color-primary-ci-hell);
+
 			color: var(--color-primary-ci-hell-kontrast);
 			opacity: $slick-opacity-text-background;
-		    }	    
+		    }
+		    
 		}
 		
 		p.credits {
@@ -101,6 +118,8 @@
 			min-width: 100%;
 			max-width: inherit;
 			margin-left: 50%;
+			background: linear-gradient(180deg,rgba(255,255,255,0) 45%,rgba(0,51,102,.8));
+			clip-path: polygon(0px 100% , 0px 10%, 100% 0%, 100% 100%);
 			@include transform-translate(-50%, 0);
 
 			@media (min-width: $screen-sm) {
@@ -114,11 +133,12 @@
 
 
 	.hero-slide-text {
-		z-index: 10;
+		z-index: 19;
 		position: absolute;
 		margin: 0 20px;
 		padding: 0;
-		top: 75%;
+		width: 100%;
+		top: 25%;
 		@include transform-translate(0, -75%);
 
 		@media (min-width: $screen-sm) {
@@ -174,12 +194,13 @@
 		cursor: pointer;
 		background: transparent;
 		color: transparent;
-		top: 75%;
+		top: calc(50% - 70px);
+	
 		
 		@include transform-translate(0, -75%);
 
 		@media (min-width: $screen-xs) {
-			top: 50%;
+			top: calc(50% - 70px);
 			@include transform-translate(0, -50%);
 		}
 
@@ -192,37 +213,36 @@
 		&:focus {
 			outline: none;
 			background: transparent;
-			color: var(--color-button-bg);
+			color: #fff;
 
 			&:before {
-				 color: var(--color-button-hover-bg);
+				color: rgba(255, 255, 255, 0.63);
+
 			}
 		}
 
 		
 		&:before {
-			font-size: $slider-arrow-width;
-			line-height: 1;
-			color: var(--color-button-bg);
-			text-shadow: 0 0 1px var(--color-button-text);
+			font-size: 150px;
+			color: rgba(255, 255, 255, 0.63);
 
 		}
 
 	}
 
 	.slick-prev {
-		left: 5px;
+		left: 15px;
 
 		[dir="rtl"] & {
 			left: auto;
-			right: 5px;
+			right: 15px;
 		}
 
 		@media (min-width: $break-1360 + 20) {
-			left: -50px;
+			left: 15px;
 			[dir="rtl"] & {
 				left: auto;
-				right: -50px;
+				right: 15px;
 			}
 		}
 
@@ -239,18 +259,24 @@
 	}
 
 	.slick-next {
-		right: 5px;
+		right: 25px;
+		
 
 		[dir="rtl"] & {
-			left: 5px;
-			right: auto;
+			left: 15px;
+			right: 15px;
+			.slick-arrow { 
+				font-size: 11em;
+		color:#fff;
+
+			}
 		}
 
 		@media (min-width: $break-1360 + 20) {
-			right: -50px;
+			right: 35px;
 			[dir="rtl"] & {
-				left: -50px;
-				right: auto;
+				left: 15px;
+				right: 15px;
 			}
 		}
 
