#1062 - Seitebreite zwischen 992 und 1399px flexibel machen

--- a/css/fau-theme-admin.css
+++ b/css/fau-theme-admin.css
@@ -561,15 +561,9 @@ a.bg-danger:focus {
 }
 @media (min-width: 992px) {
   .container {
-    width: 970px;
+    width: 100%;
   }
 }
-@media (min-width: 1200px) {
-  .container {
-    width: 1200px;
-  }
-}
-
 .row {
   margin-left: -15px;
   margin-right: -15px;
