--- a/src/sass/structure/content/_grid.scss
+++ b/src/sass/structure/content/_grid.scss
@@ -27,10 +27,7 @@
         width: $container-sm;
     }
     @media (min-width: $screen-md) {
-        width: $container-md;
-    }
-    @media (min-width: $screen-lg-min) {
-        width: $container-lg;
+        width: 100%;
     }
     @media (min-width: $screen-xl-min) {
         max-width: $container-xl;
@@ -41,11 +38,11 @@
 
 .content-row {
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
 
      
     @media (min-width: $screen-xl-min) {
-        flex-wrap: nowrap;
+        //flex-wrap: nowrap;
     }
 
     main {
@@ -75,14 +72,14 @@
         min-width: $screen-xxs - $grid-gutter-width;
         flex-grow: 1;
         @media (min-width: $screen-sm) {
-            max-width: $container-sm - $subnav-width-sm - $grid-gutter-width;
+            //max-width: $container-sm - $subnav-width-sm - $grid-gutter-width;
             padding-left: $grid-gutter-width;
         }
         @media (min-width: $screen-md) {
-            max-width: $container-md - $subnav-width-md - $grid-gutter-width;
+            //max-width: $container-md - $subnav-width-md - $grid-gutter-width;
         }
         @media (min-width: $screen-lg) {
-            max-width: $container-lg - $subnav-width-lg - $grid-gutter-width;
+            //max-width: $container-lg - $subnav-width-lg - $grid-gutter-width;
         }
         @media (min-width: $screen-xl) {
             max-width: $container-xl - $subnav-width-lg - $grid-gutter-width;
@@ -207,16 +204,16 @@
     .post-row {
         display: flex;
         justify-content: space-between;
-        flex-wrap: wrap;
+        flex-wrap: nowrap;
         width: 100%;
         @media (min-width: $screen-sm) {
-            max-width: $container-sm - $grid-gutter-width;
+            //max-width: $container-sm - $grid-gutter-width;
         }
         @media (min-width: $screen-md) {
-            max-width: $container-md - $grid-gutter-width;
+            //max-width: $container-md - $grid-gutter-width;
         }
         @media (min-width: $screen-lg) {
-            max-width: $container-lg - $grid-gutter-width;
+            //max-width: $container-lg - $grid-gutter-width;
         }
         @media (min-width: $screen-xl) {
             max-width: $container-xl - $grid-gutter-width;
@@ -237,14 +234,14 @@
 
             .with-sidebar & {
                 @media (min-width: $screen-sm) {
-                    max-width: $container-sm - $sidebar-width-posts - $grid-gutter-width;
+                    //max-width: $container-sm - $sidebar-width-posts - $grid-gutter-width;
                     padding-right: ceil(math.div($grid-gutter-width, 2));
                 }
                 @media (min-width: $screen-md) {
-                    max-width: $container-md - $sidebar-width-posts - $grid-gutter-width;
+                    //max-width: $container-md - $sidebar-width-posts - $grid-gutter-width;
                 }
                 @media (min-width: $screen-lg) {
-                    max-width: $container-lg - $sidebar-width-posts - $grid-gutter-width;
+                    //max-width: $container-lg - $sidebar-width-posts - $grid-gutter-width;
                 }
                 @media (min-width: $screen-xl) {
                     max-width: $container-xl - $sidebar-width-posts - $grid-gutter-width;
