#973 Touchscreen-Eignung verbessern // main Nav Toggle button size, line-height Upper Meta Navigation

--- a/src/sass/structure/navigation/_mainmenu.scss
+++ b/src/sass/structure/navigation/_mainmenu.scss
@@ -234,6 +234,8 @@
 
 #mainnav-toggle,
 #mainnav-toggle-close {
+    min-width: 48px;
+    min-height: 48px;
     position: absolute;
     right: 5px;
     top: 3px;
@@ -259,6 +261,7 @@
 }
 
 #mainnav-toggle:before {
+    font-size: 28px;
     @extend .fa;
     @extend .fa-bars;
 }
